--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_bootprc
+spring.datasource.username=db_user
+spring.datasource.password=db_password
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostGreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
